# climate-finance-het

./: .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  STATE.md  _quarto-manuscript-Gide.yml  _quarto-manuscript.yml  divergence.mk  dvc.yaml  manuscript.mk  multilayer-detection.mk  paths.mk  pyproject.toml  separation.mk  venues.mk  zoo.mk
.agent/guidelines/: coding-guidelines.md
.agent/runbooks/: on-start.md  submission-branch.md  submission-readiness.md
.claude/: settings.json
.claude/rules/: architecture.md  coding.md  git.md  oeconomia-style.md  review-checklist.md  writing.md
.githooks/: post-checkout  pre-commit  pre-push
conception/: 0243-fewshot-set.md  0243-sample-rewrites.md  0243-voice-alignment-kickoff.md
config/: ai-tells.yml  analysis.yaml  community_registry.yml  corpus_filter.yaml  datapaper_cluster_short_labels.json  no-fulltext-allowlist.txt  oecd_dac_sources.yaml  unfccc_sources.yaml
content/: manuscript-Gide.qmd  manuscript.qmd  slides-gide.qmd  technical-report.qmd
data/het/: .gitignore  (+1 more)
docs/: 0152-coverage-matrix.md  audit-manuscript-stat-provenance.md  bias-audit-companion-paper.md  braindump-2026-03-28.md  data-management-plan.md  editorial-brief.md  framing-aggregate-strategic-ambiguity.md  handoff-padme-divergence.md  ncc-pipeline-audit.md  notes-vannes-2026-07.md  projet livre - pitch.md  rdj-submission-checklist.md  reimport-inventory-v205.md  release-journal.md  repo-layout.md  revision-runbook.md  scout-tradition-coupling.md  style-anchor-v205.md
hooks/: post-checkout  pre-commit
libs/openalex-corpus/: .gitignore  pyproject.toml
libs/openalex-corpus/src/openalex_corpus/: __init__.py  crawl.py  embedding.py  text.py
libs/openalex-corpus/tests/: test_crawl.py  test_openalex.py
scripts/: _citation_methods.py  _citer_limited_traditions.py  _companion_plot_utils.py  _corpus_predicates.py  _course_dedup.py  _deposit_variables.py  _global_map_graph.py  _lit_confirmations.py  _null_separation.py  _permutation_citation.py  _permutation_io.py  _pre2007_traditions.py  _tradition_style.py  _venue_naming.py  analyze_100bn.py  analyze_bimodality.py  analyze_cocitation.py  analyze_embeddings.py  analyze_genealogy.py  analyze_multilingual.py  analyze_syllabi.py  analyze_unfccc_topics.py  build_het_core.py  build_smoke_fixture.py  build_teaching_yaml.py  compute_analytical_null.py  compute_breakpoints.py  compute_changepoints.py  compute_clustering_comparison.py  compute_clusters.py  compute_convergence.py  compute_crossyear_zscore.py  compute_lexical.py  compute_null_separation.py  compute_pre2007_coverage.py  compute_regression_hashes.py  compute_regression_history.py  compute_vars.py  compute_venue_concentration.py  corpus_merge_citations.py  (+64 more)
tests/: _mk_discovery.py  _script_discovery.py  _source_roots.py  _tier_autoscan.py  conftest.py  manuscript_source_qmd.py  test_alluvial_unit.py  test_analysis_mk_layout.py  test_analytical_null.py  test_analyze_multilingual.py  test_arch_compliance.py  test_archive_checksums.py  test_archive_script_paths.py  test_audit_pdf_content.py  test_bias_flag.py  test_bib_doi_title.py  test_bimodality_precision.py  test_bootstrap.py  test_build_phase_separation.py  test_build_unfccc_candidates.py  test_c2st.py  test_catalog_keydocs.py  test_catalog_merge.py  test_changepoints.py  test_circuit_breaker_non_openalex.py  test_citations_cache.py  test_citations_merge.py  test_cited_works_available.py  test_classify_type.py  test_cluster_labels_path.py  test_collect_config.py  test_compare_clustering.py  test_compute_clustering_comparison.py  test_corpus_acceptance.py  test_corpus_filter.py  test_corpus_table_export.py  test_datapaper_archive_layout.py  test_dedup_error_estimates.py  test_dedup_vars.py  test_deliverables_layout.py  (+100 more)
tickets/: .erg-assets  .ergrc  0001-multilingual-paper.erg  0003-assess-affiliation-coverage.erg  0004-temporal-decomposition.erg  0005-multilingual-figures.erg  0006-multilingual-robustness.erg  0007-write-multilingual-paper.erg  0009-submit-multilingual-paper.erg  0010-fix-isolation-density-bias.erg  0011-validate-bge-m3-crosslingual.erg  0013-global-corpus-expansion.erg  0014-whose-evidence-finding-paper.erg  0026-periodization-paper-epic.erg  0027-polarization-paper-epic.erg  0032-changepoint-detection.erg  0035-validation-corpora.erg  0036-embedding-sensitivity.erg  0038-test-strategy.erg  0039-pipeline-robustness.erg  0041-pipeline-efficiency.erg  0043-migrate-corpus-loaders.erg  0044-migrate-pandera-schemas.erg  0046-robustness-suite.erg  0049-alternative-embeddings.erg  0071-retro-indexing-skew.erg  0072-language-stratified-sensitivity.erg  0074-louvain-across-seed-variance.erg  0075-reconcile-window-set.erg  0076-joint-type-one-error.erg  0077-citation-graph-density.erg  0104-g1-pagerank-oscillation-diagnosis.erg  0106-zoo-s0-cosine-centroid.erg  0108-null-model-lexical-drivers.erg  0110-null-model-citation-cumulative.erg  0121-test-empty-corpus-dispatcher-guard.erg  0131-split-build-by-workpackage.erg  0132-refresh-vendored-tickets-erg-binary-lags.erg  0133-oeconomia-r-r-resubmission-tracking-tick.erg  0134-r-r-prose-pass-eliminate-define-by-negat.erg  (+179 more)
(+491 files in other folders)
