[project]
name = "climate-finance-het"
version = "0.1.0"
description = "Literature corpus and bibliometric analysis for Œconomia climate finance article"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "plotly",
    "networkx",
    "requests",
    "pyyaml",
    "langdetect>=1.0.9",
    "pdfplumber",
    "pytest",
    "pytest-timeout",
    "requests-mock",
    "python-dotenv>=1.2.2",
    "litellm>=1.30.0,<=1.82.6",
    "rich>=13.0",
    "pandera>=0.30.1",
    "ftfy>=6.3.1",
    "pyarrow>=23.0.1",
    "rapidfuzz",
    "pot>=0.9.0",
    "dcor>=0.6.1",
    "ruptures>=1.1.9",
    "pybursts>=0.1.1",
    "python-louvain",
    "openalex-corpus",
]

[project.optional-dependencies]
# Torch accelerator extras — mutually exclusive. Always specify one with --group corpus,
# otherwise sentence-transformers pulls a generic torch from PyPI (~2.5 GB, uncontrolled).
# doudou (no GPU):  uv sync --group corpus --extra cpu
# padme (A4000):    uv sync --group corpus --extra cu130
# The real difference is in tool.uv.sources
cpu = ["torch>=2.10.0"]
cu130 = ["torch>=2.10.0"]

[dependency-groups]
# Phase 1 corpus building: DVC + heavy ML/NLP deps.
# Install with: uv sync --group corpus --extra cpu   (or --extra cu130 on GPU machines)
# Phase 2/3 users (figures, manuscript) do NOT need this group.
corpus = [
    "dvc>=3.67.0",
    "dvc-ssh>=4.2.2",
    "sentence-transformers",
    "umap-learn",
    "python-louvain",
    "beautifulsoup4",
    "pdfplumber",
    "ddgs",
    "bibtexparser",
]
dev = [
    "fpdf2>=2.8.7",
    "mypy>=1.10",
    "pytest-xdist>=3.5",
]

[tool.pytest.ini_options]
# libs/openalex-corpus is a separate installed package with its own test suite
# (run standalone / on install); the host suite never collects it, so an
# unscoped root `pytest` does not choke on `import openalex_corpus`.
norecursedirs = ["libs"]
markers = [
    "slow: marks tests that require network access or external data (deselect with '-m \"not slow\"')",
    "integration: marks tests that spawn subprocesses or use sleep-based timing (deselect with '-m \"not integration\"')",
    "adherence: project rule enforcement (hygiene/discipline/contracts)",
]

[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu130" }],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
# Non-editable path source: uv builds a wheel and installs it into the env, so
# the shared /data env never .pth-links to a (throwaway) worktree checkout.
openalex-corpus = { path = "libs/openalex-corpus" }

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "C901",    # McCabe complexity
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "UP006",   # use builtin types (list[] not List[])
    "UP007",   # use X | Y not Union[X, Y]
    "UP035",   # deprecated typing imports
    "F401",    # unused imports
    "F541",    # f-string without placeholders
    "F811",    # redefined unused name
    "F841",    # unused variable
    "I001",    # unsorted imports
    "RUF100",  # unused noqa comments
    "PERF102", # use .values()/.keys() instead of .items() when only one needed
    "D400",    # first line should end with a period
    "D413",    # missing blank line after last section
    "D417",    # undocumented parameters in docstrings
]

[tool.ruff.lint.per-file-ignores]
# Re-export facades: imports are public API, not unused
"scripts/utils.py" = ["F401", "E402"]
"scripts/collect_syllabi.py" = ["F401"]
"scripts/compare_clustering.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-branches = 15
max-statements = 80

[tool.mypy]
files = [
    "scripts/pipeline_text.py",
    "scripts/pipeline_io.py",
    "scripts/pipeline_progress.py",
    "scripts/enrich_dois.py",
]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
