[project]
name = "openalex-corpus"
version = "0.1.0"
description = "Shared OpenAlex crawl + canonical-text conventions (model-agnostic)"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
    "requests-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openalex_corpus"]
